@@ -6,6 +6,7 @@
 - optimized @decorator
 - optimized nth() and last()
 - lzip() is now exported by default from/for py3
+- made pluck(), where() and invoke() return interators in python 3
 
 1.0.0
 - @silent, @ignore() and decorators created with @decorator will now work
